# AWS

./: design.md  pdf_extracted.txt  requirements.md
fronted_check/fronted/: index.html  preview.html
new_frontend_design/fronted/: script.js  style.css
vidya-setu/: .gitignore  README.md  stitch_analytics.html  stitch_dashboard_overview.html  stitch_modules_grid.html  stitch_tests_grid.html
vidya-setu/backend/: .env.example  README-backend.md  bedrock_error.txt  pyproject.toml  requirements.txt  test_aws.py  vercel.json
vidya-setu/backend/app/: __init__.py  bedrock_client.py  bhashini_client.py  gemini_client.py  groq_client.py  llm_cache.json  main.py  schemas.py
vidya-setu/backend/tests/: test_api.py
vidya-setu/docs/: design.md  ppt-outline.md  requirements.md  submission-checklist.md
vidya-setu/frontend/: index.html  package-lock.json  package.json
vidya-setu/frontend/public/: manifest.json
vidya-setu/frontend/src/: App.tsx  index.css  translations.ts
vidya-setu/frontend/src/components/: AppLayout.tsx  ChatBot.tsx  CourseDashboard.tsx  KnowledgeCard.tsx  LanguageSelector.tsx  ModuleViewer.tsx  OfflineBanner.tsx  ProtectedRoute.tsx  QuestionInput.tsx  StudentProfileModal.tsx  SubjectCreator.tsx  TopicSelector.tsx
vidya-setu/frontend/src/contexts/: AuthContext.tsx
vidya-setu/frontend/src/hooks/: useOfflineCache.ts
vidya-setu/frontend/src/lib/: supabase.ts
vidya-setu/frontend/src/pages/: Analytics.tsx  AuthPage.tsx  LandingPage.tsx  OTPPage.tsx  ResultsPage.tsx  StudentDashboard.tsx  TestPage.tsx
vidya-setu/frontend/src/services/: api.ts
